# toy_stories

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
dags/: hello_world_dag.py  simple_etl_dag.py
notebooks/: other_etl.py  simple_etl.py  test_etl.py
tests/: conftest.py  test_airflow.py
