[project]
name = "toy-stories"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[tool.ruff.lint]
ignore = ["F841"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]
